syntax = "proto3";
package api;
option go_package = "api";

import "google/api/annotations.proto";

message Message {
    string value = 1;
}

message HelloRequest {
    string id = 1;
    Message message = 2;
}

service EchoService {
    rpc Echo(HelloRequest) returns (Message) {
        option (google.api.http) = {
            patch: "/v1/echo/{id}"
            body: "message"
        };
    }
    rpc Echo1(Message) returns (Message) {
        option (google.api.http) = {
            post: "/v1/echo"
            body: "*"
        };
    }
}